jilles      2006/09/29 21:20:37 UTC	(20060929-6561)
  Log:
  Update catserv to new add_service().
  

  Changes:	Modified:
  +1 -1		trunk/contrib/ircd_catserv.c (File Modified) 


jilles      2006/09/29 21:15:10 UTC	(20060929-6559)
  Log:
  Add list_t *cmdtree member/parameter to service_t/add_service().
  This will allow RPC modules to find services commands.
  

  Changes:	Modified:
  +4 -1		trunk/include/servtree.h (File Modified) 
  +3 -2		trunk/modules/chanserv/main.c (File Modified) 
  +4 -2		trunk/modules/global/main.c (File Modified) 
  +3 -2		trunk/modules/memoserv/main.c (File Modified) 
  +3 -2		trunk/modules/nickserv/main.c (File Modified) 
  +3 -2		trunk/modules/operserv/main.c (File Modified) 
  +2 -2		trunk/modules/saslserv/main.c (File Modified) 
  +3 -1		trunk/src/servtree.c (File Modified) 


jilles      2006/09/29 20:51:14 UTC	(20060929-6557)
  Log:
  Update depend files.
  

  Changes:	Modified:
  +23 -1	trunk/backend/.depend (File Modified) 
  +6 -2		trunk/crypto/.depend (File Modified) 
  +12 -0	trunk/libatheme/.depend (File Modified) 
  +95 -62	trunk/modules/chanserv/.depend (File Modified) 
  +4 -2		trunk/modules/global/.depend (File Modified) 
  +24 -16	trunk/modules/memoserv/.depend (File Modified) 
  +66 -44	trunk/modules/nickserv/.depend (File Modified) 
  +208 -40	trunk/modules/operserv/.depend (File Modified) 
  +12 -28	trunk/modules/saslserv/.depend (File Modified) 
  +12 -8	trunk/modules/xmlrpc/.depend (File Modified) 
  +91 -39	trunk/protocol/.depend (File Modified) 
  +104 -47	trunk/src/.depend (File Modified) 


jilles      2006/09/29 18:11:51 UTC	(20060929-6555)
  Log:
  nickserv enforce:
  Use command_fail(), command_success_nodata() and sourceinfo_t.smu.
  

  Changes:	Modified:
  +29 -26	trunk/contrib/ns_enforce.c (File Modified) 


jilles      2006/09/29 17:45:54 UTC	(20060929-6553)
  Log:
  nickserv enforce:
  - add Id keyword
  - update the comment at the start of the file
  

  Changes:	Modified: